# Site-Display

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  SITE_API.md  Site-Display.ino  common.h  idf_component.yml  main.ino  owm_credentials.h  partitions.csv  sdkconfig  sdkconfig.defaults
components/bb_epaper/: CMakeLists.txt
main/: CMakeLists.txt  Kconfig.projbuild  display.cpp  display.h  http_client.c  http_client.h  lang.h  main.c  nvs_storage.c  nvs_storage.h  site_data.c  site_data.h  wifi_manager.c  wifi_manager.h
